# TodoForge

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  data.todo  run.ps1
src/: app.cpp  app.h  cli.cpp  cli.h  domain_error.h  main.cpp  storage.cpp  storage.h  storage_error.h  todo.cpp  todo.h  todo_collection.cpp  todo_collection.h
