cmake_minimum_required(VERSION 3.25)

project(TodoForge LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(todo
    src/main.cpp
    src/todo.cpp
    src/todo_collection.cpp
    src/cli.cpp
    src/app.cpp
    src/storage.cpp
)
